base/deployment.yaml
---
# base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: headscale
      app.kubernetes.io/instance: headscale
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headscale
        app.kubernetes.io/instance: headscale
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: headscale
          image: headscale/headscale:v0.25
          imagePullPolicy: Always
          args:
            - serve
          # It's suggested to use environment variables to configure Headscale.
          # For config reference, see https://github.com/juanfont/headscale/blob/main/config-example.yaml
          # To configure any of these as an env:
          #    1. Flatten object keys using "_"
          #    2. Prefix with "HEADSCALE_"
          #
          # For example:
          #    - "listen_addr" becomes "HEADSCALE_LISTEN_ADDR"
          #    - "log.level" becomes "HEADSCALE_LOG_LEVEL"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - name: headscale-config-cm
              subPath: config.yaml
              mountPath: /etc/headscale/config.yaml
            - name: headscale-acl-policy-cm
              subPath: acl-policy.hujson
              mountPath: /etc/headscale/acl-policy.hujson
            - name: headscale-volume
              mountPath: /etc/headscale

      volumes:
        - name: headscale-config-cm
          configMap:
            name: headscale-config
        - name: headscale-acl-policy-cm
          configMap:
            name: headscale-acl-policy
        - name: headscale-volume
          persistentVolumeClaim:
            claimName: headscale-volume-pvc
